RESOLVED FIXED182997
[GStreamer] Crash in Debug build when purging invalid tracks
https://bugs.webkit.org/show_bug.cgi?id=182997
Summary [GStreamer] Crash in Debug build when purging invalid tracks
Philippe Normand
Reported 2018-02-21 03:37:01 PST
ASSERTION FAILED: m_table DerivedSources/ForwardingHeaders/wtf/HashTable.h(212) : void WTF::HashTableConstIterator<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::checkValidity() const [with Key = WTF::AtomicString; Value = WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::VideoTrackPrivateGStreamer> >; Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::VideoTrackPrivateGStreamer> > >; HashFunctions = WTF::AtomicStringHash; Traits = WTF::HashMap<WTF::AtomicString, WTF::RefPtr<WebCore::VideoTrackPrivateGStreamer> >::KeyValuePairTraits; KeyTraits = WTF::HashTraits<WTF::AtomicString>] 1 0x7f5c38c23f16 /home/phil/WebKit/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7f5c38c23f16] 2 0x7f5c44368561 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF22HashTableConstIteratorINS_12AtomicStringENS_12KeyValuePairIS1_NS_6RefPtrIN7WebCore26VideoTrackPrivateGStreamerENS_13DumbPtrTraitsIS5_EEEEEENS_24KeyValuePairKeyExtractorIS9_EENS_16AtomicStringHashENS_7HashMapIS1_S8_SC_NS_10HashTraitsIS1_EENSE_IS8_EEE18KeyValuePairTraitsESF_E13checkValidityEv+0x3d) [0x7f5c44368561] 3 0x7f5c44366fd8 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF22HashTableConstIteratorINS_12AtomicStringENS_12KeyValuePairIS1_NS_6RefPtrIN7WebCore26VideoTrackPrivateGStreamerENS_13DumbPtrTraitsIS5_EEEEEENS_24KeyValuePairKeyExtractorIS9_EENS_16AtomicStringHashENS_7HashMapIS1_S8_SC_NS_10HashTraitsIS1_EENSE_IS8_EEE18KeyValuePairTraitsESF_EppEv+0x18) [0x7f5c44366fd8] 4 0x7f5c44364cca /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF17HashTableIteratorINS_12AtomicStringENS_12KeyValuePairIS1_NS_6RefPtrIN7WebCore26VideoTrackPrivateGStreamerENS_13DumbPtrTraitsIS5_EEEEEENS_24KeyValuePairKeyExtractorIS9_EENS_16AtomicStringHashENS_7HashMapIS1_S8_SC_NS_10HashTraitsIS1_EENSE_IS8_EEE18KeyValuePairTraitsESF_EppEv+0x18) [0x7f5c44364cca] 5 0x7f5c44362ce0 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF24HashTableIteratorAdapterINS_9HashTableINS_12AtomicStringENS_12KeyValuePairIS2_NS_6RefPtrIN7WebCore26VideoTrackPrivateGStreamerENS_13DumbPtrTraitsIS6_EEEEEENS_24KeyValuePairKeyExtractorISA_EENS_16AtomicStringHashENS_7HashMapIS2_S9_SD_NS_10HashTraitsIS2_EENSF_IS9_EEE18KeyValuePairTraitsESG_EESA_EppEv+0x1c) [0x7f5c44362ce0] 6 0x7f5c443608e0 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF21HashTableKeysIteratorINS_9HashTableINS_12AtomicStringENS_12KeyValuePairIS2_NS_6RefPtrIN7WebCore26VideoTrackPrivateGStreamerENS_13DumbPtrTraitsIS6_EEEEEENS_24KeyValuePairKeyExtractorISA_EENS_16AtomicStringHashENS_7HashMapIS2_S9_SD_NS_10HashTraitsIS2_EENSF_IS9_EEE18KeyValuePairTraitsESG_EES2_S9_EppEv+0x18) [0x7f5c443608e0] 7 0x7f5c44351ee1 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN7WebCore27MediaPlayerPrivateGStreamer23purgeInvalidVideoTracksEN3WTF6VectorINS1_6StringELm0ENS1_15CrashOnOverflowELm16ENS1_10FastMallocEEE+0x16b) [0x7f5c44351ee1] 8 0x7f5c4434efc6 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN7WebCore27MediaPlayerPrivateGStreamer19notifyPlayerOfVideoEv+0x6fe) [0x7f5c4434efc6] 9 0x7f5c4434e887 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x9745887) [0x7f5c4434e887] 10 0x7f5c443580bc /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x974f0bc) [0x7f5c443580bc] 11 0x7f5c4434e8c5 /home/phil/WebKit/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN7WebCore27MediaPlayerPrivateGStreamer20videoChangedCallbackEPS0_+0x3b) [0x7f5c4434e8c5] 12 0x7f5c290ebfce /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call_unix64+0x4c) [0x7f5c290ebfce] 13 0x7f5c290eb93f /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call+0x22f) [0x7f5c290eb93f] 14 0x7f5c2ff66d23 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_cclosure_marshal_generic+0x1d3) [0x7f5c2ff66d23] 15 0x7f5c2ff6655d /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_closure_invoke+0x19d) [0x7f5c2ff6655d] 16 0x7f5c2ff789be /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(+0x219be) [0x7f5c2ff789be] 17 0x7f5c2ff81055 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit_valist+0xa45) [0x7f5c2ff81055] 18 0x7f5c2ff81a12 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit+0x82) [0x7f5c2ff81a12] 19 0x7f5c290ebfce /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call_unix64+0x4c) [0x7f5c290ebfce] 20 0x7f5c290eb93f /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call+0x22f) [0x7f5c290eb93f] 21 0x7f5c2ff66d23 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_cclosure_marshal_generic+0x1d3) [0x7f5c2ff66d23] 22 0x7f5c2ff6655d /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_closure_invoke+0x19d) [0x7f5c2ff6655d] 23 0x7f5c2ff789be /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(+0x219be) [0x7f5c2ff789be] 24 0x7f5c2ff81055 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit_valist+0xa45) [0x7f5c2ff81055] 25 0x7f5c2ff81a12 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit+0x82) [0x7f5c2ff81a12] 26 0x7f5c322b1980 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgstreamer-1.0.so.0(gst_element_remove_pad+0x260) [0x7f5c322b1980] 27 0x7f5c290ebfce /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call_unix64+0x4c) [0x7f5c290ebfce] 28 0x7f5c290eb93f /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call+0x22f) [0x7f5c290eb93f] 29 0x7f5c2ff66d23 /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_cclosure_marshal_generic+0x1d3) [0x7f5c2ff66d23] 30 0x7f5c2ff6655d /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_closure_invoke+0x19d) [0x7f5c2ff6655d] 31 0x7f5c2ff789be /home/phil/WebKit/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(+0x219be) [0x7f5c2ff789be]
Attachments
Patch (4.19 KB, patch)
2018-02-21 03:39 PST, Philippe Normand
calvaris: review+
Philippe Normand
Comment 1 2018-02-21 03:39:20 PST
Philippe Normand
Comment 2 2018-02-21 05:27:05 PST
Radar WebKit Bug Importer
Comment 3 2018-02-21 05:28:39 PST
Note You need to log in before you can comment on or make changes to this bug.