Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -1455,6 +1455,10 @@ void MediaPlayerPrivateGStreamer::processTableOfContentsEntry(GstTocEntry* entry
 
 void MediaPlayerPrivateGStreamer::purgeInvalidAudioTracks(Vector<String> validTrackIds)
 {
+    if (validTrackIds.isEmpty()) {
+        m_audioTracks.clear();
+        return;
+    }
     for (auto audioTrackId : m_audioTracks.keys()) {
         if (validTrackIds.contains(audioTrackId))
             continue;
@@ -1467,6 +1471,10 @@ void MediaPlayerPrivateGStreamer::purgeInvalidAudioTracks(Vector<String> validTr
 
 void MediaPlayerPrivateGStreamer::purgeInvalidVideoTracks(Vector<String> validTrackIds)
 {
+    if (validTrackIds.isEmpty()) {
+        m_videoTracks.clear();
+        return;
+    }
     for (auto videoTrackId : m_videoTracks.keys()) {
         if (validTrackIds.contains(videoTrackId))
             continue;
@@ -1479,6 +1487,10 @@ void MediaPlayerPrivateGStreamer::purgeInvalidVideoTracks(Vector<String> validTr
 
 void MediaPlayerPrivateGStreamer::purgeInvalidTextTracks(Vector<String> validTrackIds)
 {
+    if (validTrackIds.isEmpty()) {
+        m_textTracks.clear();
+        return;
+    }
     for (auto textTrackId : m_textTracks.keys()) {
         if (validTrackIds.contains(textTrackId))
             continue;
